last update - star wars empire theme app :)

--- a/app/views/assets/_nav.html.haml
+++ b/app/views/assets/_nav.html.haml
@@ -2,7 +2,7 @@
   - if user_signed_in?
     .ui.container
       .item
-        %img(src="https://semantic-ui.com/images/logo.png" alt="")
+        %img(src="https://seeklogo.com/images/G/Galactic_Empire-logo-7A19A28ABA-seeklogo.com.png" alt="")
       .right.menu
         %a= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, class: 'item'
   - else
