--- a/app/views/assets/_sidebar.html.erb
+++ b/app/views/assets/_sidebar.html.erb
@@ -3,19 +3,19 @@
     <div class="ui visible inverted left vertical sidebar menu">
       <a class="item">
         <i class="home icon"></i>
-        Home
+        Inicio
       </a>
       <a class="item">
-        <i class="block layout icon"></i>
-        Topics
+        <i class="folder outline icon"></i>
+        Proyectos
       </a>
       <a class="item">
-        <i class="smile icon"></i>
-        Friends
+        <i class="eye icon"></i>
+        Observaciones
       </a>
       <a class="item">
-        <i class="calendar icon"></i>
-        History
+        <i class="user outline icon"></i>
+        Perfil
       </a>
     </div>
 <% end %>
