last update - added observations and associations

--- a/app/views/assets/_nav.html.haml
+++ b/app/views/assets/_nav.html.haml
@@ -8,6 +8,4 @@
   - else
     .ui.container
       .item
-        %img(src="https://semantic-ui.com/images/logo.png" alt="")
-      .right.menu
-        %a= link_to "Iniciar sesión", new_user_session_path, class: 'item'
+        %img(src="https://seeklogo.com/images/G/Galactic_Empire-logo-7A19A28ABA-seeklogo.com.png" alt="")
